finished index gift design ui